[project]
name = "match-scraper-agent"
version = "0.1.0"
description = "Agentic match manager — PydanticAI agent routing through iron-claw proxy"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.1",
    "structlog>=24.0",
    "httpx>=0.28",
]

[project.scripts]
match-scraper-agent = "cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/cli", "src/config", "src/mtcli", "src/utils"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live iron-claw proxy + mt-cli (deselect with '-m not integration')",
]
